refs #139 make color input visible but with 0 opacity, it fixes color changing in other browsers than Firefox [skip ci]

--- a/css/phonetrack.css
+++ b/css/phonetrack.css
@@ -945,3 +945,12 @@ input.geofencename {
     -moz-appearance: number-input !important;
     -webkit-appearance: initial !important;
 }
+#colorinput {
+    opacity: 0;
+    width: 0px;
+    height: 0px;
+    min-height: 0px;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+}
